--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="root" class="container-fluid"></div>
+    <script src="https://kit.fontawesome.com/23123c98f4.js" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
       integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
@@ -21,5 +22,6 @@
       integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
